--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
+    "helmet": "^3.21.2",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
+    "query-string": "^6.9.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
     "react-notification-badge": "^1.5.1",
     "react-paginating": "^1.3.1",
