--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.8.0",
-    "react-notification-badge": "^1.5.1",
     "react-paginating": "^1.3.1",
+    "react-pose": "^4.0.10",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "styled-components": "^4.4.1"
